# llpm

./: CLAUDE.md  PLAN_DISCUSSION.md  README.md  build_guide.md  project.manifest.json  pyproject.toml
.llpm/: config.toml
llpm/templates/: epic.md  feature.md  research.md
llpm/tickets/: EPIC-001_TASKFABRIC_INTEGRATION_PLUGGABLE_TICKETSTORE.md  FEAT-001_TICKETSTORE_PROTOCOL_LOCALDIRSTORE_EXTRACTION.md  FEAT-002_MDTREESTORE_VAULTBACKED_STORE_OVER_MARKDOWNTREESERVICE.md  FEAT-003_DERIVED_MIRROR_GITEA_WRITE_PATH_INREPO_LLPM_WEBINTERACTABLE.md  TASK-001_STORE_DISCOVERY_INREPO_POINTER_RESOLUTION_ORDER.md  TASK-002_MODELTIER_FRONTMATTER_TEMPLATES_BOARDBACKLOG_DISPLAY.md  TASK-003_MDTREESTORE_TLS_TRUST_MKCERT_CA_NOT_TRUSTED_BY_PYTHON_ON_DEV_MACHINES.md  TASK-004_VAULTMODE_WRITE_PATH_ROUTE_MUTATION_COMMANDS_THROUGH_THE_STORE_SEAM_BOARD_SEEDING.md
src/llpm/: __main__.py  commands.py  parser.py  store.py
src/llpm/skills/: llpm-init.md  llpm-migrate-fd.md  llpm-planner.md  llpm-pm.md  llpm-worker.md
src/llpm/templates/: feature.md  research.md  task.md
tests/: conftest.py  test_commands.py  test_json.py  test_mdtreestore.py  test_parser.py  test_store.py  test_vault_commands.py
tests/fixtures/docs/templates/: task.md
tests/fixtures/docs/tickets/: EPIC-001_CLI_TOOLING.md  FEAT-001_EXPANDED_FRONTMATTER.md  FEAT-002_DOC_PARSING.md  RESEARCH-001_YAML_LIBRARIES.md  TASK-001_ADD_PYYAML.md
tests/fixtures/docs/tickets/archive/: FEAT-000_INITIAL_SETUP.md
